====================================================================================================
1.2.4
====================================================================================================

* Replacing participant.status with new state table

  - Participant conditions (states) can now be managed by administrators
  - Each role can be restricted to only setting certain states

====================================================================================================
1.2.3
====================================================================================================

* Adding new pre-recruit feature
  - This feature provides functionality to randomly select one individual in a household
  - Individuals are grouped into quotas and randomly selected

* Adding new search participant utility
  - Allows for complex search of participant based on address, phone, participant and note details

====================================================================================================
1.2.2
====================================================================================================

* Adding new participant multiedit operations
  - Certain roles may now edit multiple participants in a single operation

* Adding new feature to override quota restrictions
  - Every participant how has an "Override Quota" setting
  - Setting this setting to true will allow the participant to override quota restrictions
  - A new token attribute, "override quota" which reports the participant's value as 1 or 0

====================================================================================================
1.2.1
====================================================================================================

* Making changes to cognitive rescoring
  - typists can now rescore interviews
  - navigation buttons removed when rescoring
  - interviews can be rescored even after rescoring is complete

* Adding new role.all_sites column
